# youtube-comment-analyzer

./: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: authenticator.rs  database.rs  main.rs  models.rs  sentiment.rs  user_repository.rs  youtube.rs
src/lib/: CommentForm.svelte  CommentItem.svelte  LoginForm.svelte  ProfileForm.svelte  _CommentItem.css  _LoginForm.css  _ProfileForm.css
src/routes/: +page.svelte  _page.css
